packages/tree-sitter-talon/tree_sitter_talon-1007.3.2.0-cp37-cp37m-win32.whl/tree_sitter_talon/data/tree-sitter-talon/test/corpus/andreas-talon/contexts.txt
================================================================================
1. Context andreas-talon/misc/tabs/tabs.talon
================================================================================

tag: user.tabs
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
2. Context andreas-talon/misc/abort/abort.talon
================================================================================

mode: command
mode: dictation
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
3. Context andreas-talon/misc/scroll/scroll.talon
================================================================================

tag: user.scroll
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
4. Context andreas-talon/misc/modes/dictation_mode.talon
================================================================================

mode: dictation
language: en_US
language: sv_SE
experiment: anchor-file
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
5. Context andreas-talon/misc/sleep/sleep.talon
================================================================================

mode: command
mode: dictation
language: en_US
language: sv_SE
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
6. Context andreas-talon/misc/sleep/sleep_mode.talon
================================================================================

mode: sleep
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
7. Context andreas-talon/misc/operating_system/linux.talon
================================================================================

os: linux
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
8. Context andreas-talon/misc/operating_system/windows.talon
================================================================================

os: windows
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
9. Context andreas-talon/misc/navigation/navigation.talon
================================================================================

tag: user.navigation
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
10. Context andreas-talon/misc/mouse/zoom_mouse.talon
================================================================================

tag: user.zoom_mouse
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
11. Context andreas-talon/misc/editor_not_vscode.talon
================================================================================

not app: vscode
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
12. Context andreas-talon/misc/audio_video.talon
================================================================================

tag: user.av
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
13. Context andreas-talon/misc/zoom/zoom.talon
================================================================================

tag: user.zoom
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
14. Context andreas-talon/misc/clipboard_manager/clipboard_manager_open.talon
================================================================================

mode: user.clipboard_manager
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
15. Context andreas-talon/misc/window_management/window_focus_open.talon
================================================================================

mode: user.focus
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
16. Context andreas-talon/misc/find/find.talon
================================================================================

tag: user.find
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
17. Context andreas-talon/misc/help/help_commands_open.talon
================================================================================

mode: user.help_commands
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
18. Context andreas-talon/misc/help/help_scope_open.talon
================================================================================

mode: user.help_scope
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
19. Context andreas-talon/misc/help/help_alphabet_open.talon
================================================================================

mode: user.help_alphabet
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
20. Context andreas-talon/misc/help/help_search_open.talon
================================================================================

mode: user.help_search
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
21. Context andreas-talon/misc/help/help_formatters_open.talon
================================================================================

mode: user.help_formatters
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
22. Context andreas-talon/langs/talon/talon.talon
================================================================================

tag: user.talon
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
23. Context andreas-talon/langs/python/python.talon
================================================================================

tag: user.python
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
24. Context andreas-talon/langs/java/java.talon
================================================================================

tag: user.java
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
25. Context andreas-talon/langs/html/html.talon
================================================================================

tag: user.html
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
26. Context andreas-talon/langs/tags/operators.talon
================================================================================

tag: user.operators
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
27. Context andreas-talon/langs/tags/comments.talon
================================================================================

tag: user.comments
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
28. Context andreas-talon/langs/tags/generic_language.talon
================================================================================

tag: user.generic_language
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
29. Context andreas-talon/langs/json/json.talon
================================================================================

tag: user.json
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
30. Context andreas-talon/langs/javascript/typescript.talon
================================================================================

tag: user.typescript
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
31. Context andreas-talon/langs/javascript/javascript.talon
================================================================================

tag: user.javascript
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
32. Context andreas-talon/langs/javascript/typescriptreact.talon
================================================================================

tag: user.typescriptreact
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
33. Context andreas-talon/langs/javascript/javascriptreact.talon
================================================================================

tag: user.javascriptreact
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
34. Context andreas-talon/text/homophones/homophones_open.talon
================================================================================

mode: user.homophones
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
35. Context andreas-talon/apps/repl.talon
================================================================================

title: Talon - REPL
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
36. Context andreas-talon/apps/discord/discord.talon
================================================================================

app: discord
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
37. Context andreas-talon/apps/web/mattermost.talon
================================================================================

app: mattermost
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
38. Context andreas-talon/apps/web/youtube.talon
================================================================================

tag: browser
and title: /YouTube| - YouTube$/
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
39. Context andreas-talon/apps/web/slack.talon
================================================================================

app: slack
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
40. Context andreas-talon/apps/maven/maven.talon
================================================================================

tag: user.maven
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
41. Context andreas-talon/apps/terminal/windows_terminal.talon
================================================================================

app: windows_terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
42. Context andreas-talon/apps/terminal/bash.talon
================================================================================

tag: user.bash
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
43. Context andreas-talon/apps/terminal/terminal.talon
================================================================================

tag: terminal
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
44. Context andreas-talon/apps/kodi/kodi.talon
================================================================================

os: windows
and app.exe: kodi.exe
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
45. Context andreas-talon/apps/yarn/yarn.talon
================================================================================

tag: user.yarn
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
46. Context andreas-talon/apps/browser/browser.talon
================================================================================

tag: browser
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
47. Context andreas-talon/apps/browser/firefox.talon
================================================================================

app: firefox
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
48. Context andreas-talon/apps/file_manager/file_manager_win.talon
================================================================================

os: windows
and tag: user.file_manager
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
49. Context andreas-talon/apps/file_manager/windows_explorer.talon
================================================================================

app: windows_explorer
app: windows_file_browser
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
50. Context andreas-talon/apps/file_manager/file_manager.talon
================================================================================

tag: user.file_manager
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
51. Context andreas-talon/apps/windows_task_switching.talon
================================================================================

os: windows
app.exe: Explorer.EXE
title: Task Switching
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
52. Context andreas-talon/apps/vscode/draft_editor.talon
================================================================================

not app: vscode
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (match_modifier)
      (identifier)
      (implicit_string))))

================================================================================
53. Context andreas-talon/apps/vscode/vscode_take_word.talon
================================================================================

app: vscode
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
54. Context andreas-talon/apps/vscode/vscode.talon
================================================================================

app: vscode
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
55. Context andreas-talon/apps/vscode/draft_editor_active.talon
================================================================================

tag: user.draft_editor_active
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
56. Context andreas-talon/apps/vscode/vscode_notebook.talon
================================================================================

tag: user.vscode_notebook
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
57. Context andreas-talon/apps/vscode/vscode_bashbook.talon
================================================================================

app: vscode
win.file_ext: .bashbook
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))
    (match
      (identifier)
      (implicit_string))))

================================================================================
58. Context andreas-talon/apps/npm/npm.talon
================================================================================

tag: user.npm
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
59. Context andreas-talon/apps/notepad/notepad.talon
================================================================================

app: notepad
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
60. Context andreas-talon/apps/git/git.talon
================================================================================

tag: user.git
-

--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))

================================================================================
61. Context andreas-talon/settings/settings_work_laptop.talon (failing)
================================================================================

hostname: EliteBook
-


--------------------------------------------------------------------------------

(source_file
  (matches
    (match
      (identifier)
      (implicit_string))))
